# read-lnm-thies

./: .gitignore  README.md  pyproject.toml
src/emulator/: emulator.py
src/readLnm/: __main__.py  comRs232.py  commands.py  communicateLnm.py  communicateTLS.py  handleVirtualPorts.py  myLogger.py  processManager.py  read.py  serialLNM.py  serialRS485.py  settingsFinder.py  specialLnmCommands.py
