[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "readLNM"
version = "0.1.4"
description = "basic programm to communicate with Thies LNM"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "Julian Zager" }
]


dependencies = [
  "pyserial",
]

[project.scripts]
comLnmThies = "readLnm.communicateLnm:communicate"





